--- a/html/header.html
+++ b/html/header.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> 
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     
+    <!--Menu-->
+     <header>
+        <img src="../imagens/INDAYARA-removebg-preview.png" alt="" width="200px">
+        <nav> 
+            <ul class="listanav">
+             <li>Página inicial</li>
+             <li>Minha história</li>
+             <li>Chegue até mim</li>
+            </ul>
+        </nav>
+     </header>
 </body>
 </html>
