--- a/index.html
+++ b/index.html
@@ -4,9 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <link rel="stylesheet" href="css/trabalhos.css">
 </head>
 <body>
-    
+<!--Depoimentos-->
+
+
+
+ <!---Escopo a ser usado-->
+
+    <section class="video"> video</section>
+<main id="cards hoover">
+   
+    <section class="container">
+
+        <div class="feedback">
+            <h1>Feedback</h1>
+        </div>
+        <div class="card"> 
+            <div class="face face1">
+                <div class="conteudo">
+                    <div class="icon">
+                        <img src="/imagens/Like icon 3d vector illustration.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="face back1">
+                <div class="conteudo">
+                    <h3>Nathali Moore</h3>
+                    <p>Quero agradecer pelo seu trabalo excepcional, as tranças me deram um up!</p>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+    <section class="container">
+        <div class="card"> 
+
+            <div class="face face1">
+                <div class="conteudo">
+                    <div class="icon">
+                        <img src="/imagens/instagram_2504918.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="face back1">
+                <div class="conteudo">
+                    <h3>card</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, minima! Eos sint, distinctio totam accusamus officiis ad a est quibusdam repellat rem hic molestiae quae, debitis assumenda nihil dolorum ipsam.</p>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+
+    <section class="container">
+        <div class="card"> 
+
+            <div class="face face1">
+                <div class="conteudo">
+                    <div class="icon">
+                        <img src="/imagens/instagram_2504918.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="face back1">
+                <div class="conteudo">
+                    <h3>card</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, minima! Eos sint, distinctio totam accusamus officiis ad a est quibusdam repellat rem hic molestiae quae, debitis assumenda nihil dolorum ipsam.</p>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+</main>
+
+<!--Gabi-->
+
+
 </body>
 </html>
