--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="css/trabalhos.css">
 </head>
 <body>
+    
+<!--Mari-->
+
+<!--Trabalhos-->
+<section class="corpo">
+    <section class="trabalhos">
+        <div class="box" style="background-image: url(img/1);"></div>
+        <div class="box" style="background-image: url(img/2);"></div>
+        <div class="box" style="background-image: url(img/3);"></div>
+        <div class="box" style="background-image: url(img/4);"></div>
+        <div class="box" style="background-image: url(img/5);"></div>
+    </section>
+</section>
+
 <!--Depoimentos-->
 
 
