--- a/html/header.html
+++ b/html/header.html
@@ -18,6 +18,8 @@
              <li>Chegue até mim</li>
             </ul>
         </nav>
+
+        <div id="teste"></div>
      </header>
 </body>
 </html>
