--- a/index.html
+++ b/index.html
@@ -11,13 +11,23 @@
 <!--Mari-->
 
 <!--Trabalhos-->
-<section class="corpo">
+<section class="video"> video</section>
+
+<section class="
+corpo">
+    <div class="tituloTrabalhos">
+        <h1>Meus trabalhos</h1>
+    </div>
+    <div class="subtituloTrabalhos">
+        <h2>Os modelos mais queridos pelas clientes.</h2>
+    </div>
+
     <section class="trabalhos">
-        <div class="box" style="background-image: url(img/1);"></div>
-        <div class="box" style="background-image: url(img/2);"></div>
-        <div class="box" style="background-image: url(img/3);"></div>
-        <div class="box" style="background-image: url(img/4);"></div>
-        <div class="box" style="background-image: url(img/5);"></div>
+        <div class="box" style="background-image: url(/imagens/img1.jfif);"></div>
+        <div class="box" style="background-image: url(/imagens/img2.jpeg);"></div>
+        <div class="box" style="background-image: url(/imagens/img4.jfif);"></div>
+        <div class="box" style="background-image: url(/imagens/img5.jfif);"></div>
+        <div class="box" style="background-image: url(imagens/img3.jfif);"></div>
     </section>
 </section>
 
@@ -27,7 +37,7 @@
 
  <!---Escopo a ser usado-->
 
-    <section class="video"> video</section>
+   
 <main id="cards hoover">
    
     <section class="container">
