--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/trabalhos.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -19,7 +22,7 @@ corpo">
         <h1>Meus trabalhos</h1>
     </div>
     <div class="subtituloTrabalhos">
-        <h2>Os modelos mais queridos pelas clientes.</h2>
+        <h4>Os modelos mais queridos pelas clientes.</h4>
     </div>
 
     <section class="trabalhos">
