--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>iYA: Indayara Afro Beleza</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -115,14 +115,15 @@ corpo">
 
 <!--Gabi-->
 <!--História das tranças-->
-<main class="historia">
+
     
-    <h1 class="historiadastranças"> História das tranças</h1>
+    <h1 class="historiadastranças"> HISTÓRIA DAS TRANÇAS </h1>
+
+<main class="historia">
 
     <section class="bloco1">
-     <p class="txt1">As tranças africanas têm uma história fascinante que se estende por milhares de anos. Elas são um estilo de penteado popular em muitas culturas africanas e foram usadas como uma forma de expressão cultural, religiosa e social.
+     <p class="txt1">As tranças africanas têm uma história que se estende por milhares de anos. São um estilo de penteado popular em muitas culturas africanas e foram usadas como uma forma de expressão cultural, religiosa e social.
     Diferentes tribos africanas usavam tranças como uma forma de identificação, com penteados específicos que indicavam idade, status social e posição na comunidade. Durante a era do comércio de escravos, muitos africanos foram capturados e levados para outras partes do mundo, incluindo as Américas, mas mesmo assim continuaram a trançar seus cabelos como uma forma de manter sua identidade cultural e conexão com suas raízes africanas.
-    As tranças africanas ganharam destaque nos anos 60 e 70 nos Estados Unidos e em outros lugares como parte do movimento de libertação negra e da celebração da cultura africana. 
     </p>
     </section>
 
@@ -133,21 +134,21 @@ corpo">
     <br>
 
     <section class="bloco3">
-        <p class="txt2">
-            Esse penteado foi popularizado por celebridades negras como Cicely Tyson e Stevie Wonder, e tornou-se um símbolo de orgulho e afirmação cultural para muitos negros.
-            Hoje, as tranças africanas continuam populares em todo o mundo, e são usadas como uma forma de expressão cultural e auto-expressão para muitas pessoas. Além disso, elas também representam uma forma de ganhar a vida para muitas trancistas habilidosas em países de todo o mundo. As tranças africanas são um símbolo duradouro de conexão com a herança africana e representam uma história rica e diversa que continua a influenciar a moda e a cultura global. <br>
 
-         Existem inúmeros estilos de tranças africanas, cada um com suas características únicas. Alguns dos estilos mais populares incluem:
-         <ol class="tipos">
-<li>Box braids - tranças feitas com cabelo sintético em forma de caixa;</li>
-<li>Fulani braids - tranças com uma mecha solta que percorre todo o comprimento do cabelo;</li>
-<li>Nagô - É caracterizado por linhas retas e simétricas, geralmente formando padrões geométricos no couro cabeludo.</li>
-        </ol>
-        </p>
-</section>
+    </section>
 
     <section class="bloco4">
+        <p class="txt2">
+            Esse penteado foi popularizado por celebridades negras e tornou-se um símbolo de orgulho e afirmação cultural.
+            Hoje, as tranças africanas continuam populares em todo o mundo, e são usadas como uma forma de expressão. Além disso, elas também representam uma forma de ganhar a vida para muitas trancistas habilidosas em países de todo o mundo. As tranças africanas são um símbolo duradouro de conexão com a herança africana e representam uma história rica e diversa que continua a influenciar a moda e a cultura global. <br>
 
+         Existem inúmeros estilos de tranças africanas, cada um com suas características únicas. Alguns dos estilos mais populares incluem:
+         <br>
+         <br>
+        -BOX BRAIDS - tranças feitas com cabelo sintético em forma de caixa; <br>
+        -FULANI BRAIDS - tranças com uma mecha solta que percorre todo o comprimento do cabelo;<br>
+        -NAGÔ - É caracterizado por linhas retas e simétricas, geralmente formando padrões geométricos no couro cabeludo. <br>
+        </p>
     </section>
 
 </main>
