--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
 
 <!--Trabalhos-->
 <section class="video"> video</section>
-
-<section class="
-corpo">
+<section class="bodyCorpo">
+    <section class="corpo" >
     <div class="tituloTrabalhos">
         <h1>Meus trabalhos</h1>
     </div>
     <div class="subtituloTrabalhos">
-        <h4>Os modelos mais queridos pelas clientes.</h4>
+        <p>Os modelos mais queridos pelas clientes.</p>
     </div>
 
     <section class="trabalhos">
@@ -32,8 +31,8 @@ corpo">
         <div class="box" style="background-image: url(/imagens/img5.jfif);"></div>
         <div class="box" style="background-image: url(/imagens/img3.jfif);"></div>
     </section>
+    </section>
 </section>
-
 <!--Depoimentos-->
 
 
