--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
 
     <section class="trabalhos">
+        <div class="img" style="background-image: url(/imagens/img-braids.png);"></div>
         <div class="box" style="background-image: url(/imagens/img1.jfif);"></div>
         <div class="box" style="background-image: url(/imagens/img2.jpeg);"></div>
         <div class="box" style="background-image: url(/imagens/img4.jfif);"></div>
