--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <main class="SessãoMari">
         <section class="TextoMari">
             <h1>Força.</h1>
-            <h1>Zelo.</h1>
+            <h1>Ancestralidade.</h1>
             <h1>Beleza.</h1>
         </section>
 
         <section class="trabalhos">
-            <div class="box" style="background-image: url(/imagens/img1.png);"> </div>
+            <div class="box" style="background-image: url(./imagens/img1.png);"></div>
             <div class="box" style="background-image: url(/imagens/img4.png);"></div>
             <div class="box" style="background-image: url(/imagens/img5.png);"></div>
             <div class="box" style="background-image: url(/imagens/img3.png);"></div>
