--- a/html/header.html
+++ b/html/header.html
@@ -3,28 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> 
+    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
-    
-    <!--Menu-->
-     <header>
-        <img src="../imagens/INDAYARA-removebg-preview.png" alt="" width="200px">
-        <nav> 
-            <ul class="listanav">
-             <li>Página inicial</li>
-             <li>Minha história</li>
-             <li>Chegue até mim</li>
-            </ul>
-        </nav>
 
-        <div id="teste"></div>
-     </header>
-
+<body class="sos">
     
+    <header class="header">
+    <a href="#" class="logo"><img src="../imagens/INDAYARA (1).svg" alt="" srcset="" class="imagemLogo"></a>
+    <nav class="navbar">
+     <a href="#">Pagina Inicial</a>
+     <a href="#">Me conheça</a>
+     <a href="#">Chegue até mim</a>
+    </nav>
+    </header>
 </body>
 </html>
