--- a/html/pagindayara.html
+++ b/html/pagindayara.html
@@ -11,7 +11,16 @@
 </head>
 <body>
     <!-- MENU-->
-    
+    <header>
+        
+        <nav> 
+            <ul class="listanav">
+             <li>Página inicial</li>
+             <li>Minha história</li>
+             <li>Chegue até mim</li>
+            </ul>
+        </nav>
+     </header>
 
       <!--VIDEO INDAYARA-->
      <div class="video-container">
