--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
 <link rel="stylesheet" href="css/swiper-bundle.min.css">
 </head>
 <body>
-    
+    <header class="header">
+        <a href="#" class="logo"><img src="./imagens/INDAYARA (1).svg" alt="" srcset="" class="imagemLogo"></a>
+        <nav class="navbar">
+         <a href="#">Pagina Inicial</a>
+         <a href="#">Me conheça</a>
+         <a href="#">Chegue até mim</a>
+        </nav>
+        </header>
 <!--Mari-->
 
 <!--Trabalhos-->
