--- a/html/header.html
+++ b/html/header.html
@@ -13,12 +13,19 @@
 <body class="sos">
     
     <header class="header">
+
     <a href="#" class="logo"><img src="../imagens/INDAYARA (1).svg" alt="" srcset="" class="imagemLogo"></a>
+    
     <nav class="navbar">
-     <a href="#">Pagina Inicial</a>
-     <a href="#">Me conheça</a>
-     <a href="#">Chegue até mim</a>
+        <button id="btn-mobile">Menu</button>
+        <ul id="menu"></ul>
+           <li>Pagina Inicial</li>
+          <li>Me conheça</li>
+          <li>Contatos</li>
+        </ul>
     </nav>
     </header>
+
+    <script src="../js/header.js"></script>
 </body>
 </html>
