--- a/html/footer.html
+++ b/html/footer.html
@@ -62,7 +62,7 @@
         <li>
             <a href="#">E-mail</a>
             <a href="#">Instagram</a>
-            <a href="#">Whatsapp</a>
+            <a href="https://wa.me/5511918984543" class="Whatsapp">Whatsapp</a>
         </li>
       </ul>
     </div>
